tdf#120786: show undocked toolbar only when it's ready

in SetAlwaysOnTop set window flags only, don't show the widget yet
(it'll be shown later, when it can be painted in full)

Change-Id: I5e855f1ebba1eb9985744ece055a0f141e965940
Reviewed-on: https://gerrit.libreoffice.org/67739
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
Tested-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit ad6d9bce1126997750d3c3c2606d28164d63d1d8)