vcl/qt5/Qt5Frame.cxx
@@ -610,7 +610,6 @@ void Qt5Frame::SetAlwaysOnTop(bool bOnTop)
         pWidget->setWindowFlags(flags | Qt::CustomizeWindowHint | Qt::WindowStaysOnTopHint);
     else
         pWidget->setWindowFlags(flags & ~(Qt::CustomizeWindowHint | Qt::WindowStaysOnTopHint));
-    pWidget->show();
 }
 
 void Qt5Frame::ToTop(SalFrameToTop nFlags)
